fix: format & tests

--- a/src/components/section/Nav.astro
+++ b/src/components/section/Nav.astro
@@ -1,5 +1,5 @@
 ---
-const {t} = Astro.props;
+const { t } = Astro.props;
 ---
-<nav aria-label="Main Navigation">
-</nav>
+
+<nav aria-label="Main Navigation"></nav>
