--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const sections = [Nav, Hero, Intro, About, News, Sponsors, Cycle, Time, Items, P
 		<script>
 			// 載入字型。如果有更新 HTML 文字，記得重新執行一次 emfont.init()
 			import "https://font.emtech.cc/emfont.js";
-
+			declare const emfont: any;
 			emfont.init();
 
 			const isElementInViewport = (el: Element): boolean => {
