--- a/src/components/FormInput.astro
+++ b/src/components/FormInput.astro
@@ -13,45 +13,45 @@ const { type = "text", title = "", name = "", description = "", placeholder = "æ
 
 <style>
 	.form-field-description {
-		margin-top: 0.3em;
-		align-self: stretch;
-		color: var(--Strong, #1d1d1f);
+		color: var(--Black, #1d1d1f);
 		font-family: "LINE Seed TW_OTF";
-		font-size: 14px;
+		font-size: 0.875rem;
 		font-style: normal;
 		font-weight: 400;
-		line-height: 133%; /* 18.62px */
+		line-height: 133%; /* 1.16375rem */
+		align-self: stretch;
+		margin-top: 0.3rem;
 	}
 	.form-field-input {
-		margin-top: 0.6em;
 		display: flex;
-		width: 412px;
-		height: 56px;
-		padding: 0 16px;
+		width: 25.75rem;
+		height: 3.5rem;
+		padding: 0 1rem;
 		align-items: center;
-		gap: 10px;
-		border-radius: 12px;
+		gap: 0.625rem;
+		border-radius: 0.75rem;
 		border: 1px solid #86868b;
+		margin-top: 0.7rem;
 	}
 
 	.required-signal {
 		color: #f00;
 		font-family: "LINE Seed TW_OTF";
-		font-size: 16px;
+		font-size: 1rem;
 		font-style: normal;
 		font-weight: 700;
 		line-height: 100%;
-		letter-spacing: 0.8px;
+		letter-spacing: 0.05rem;
 	}
 
 	.form-field-name {
 		align-self: stretch;
-		color: var(--Strong, #1d1d1f);
+		color: var(--Black, #1d1d1f);
 		font-family: "LINE Seed TW_OTF";
-		font-size: 16px;
+		font-size: 1rem;
 		font-style: normal;
 		font-weight: 700;
-		line-height: 100%; /* 16px */
-		letter-spacing: 0.8px;
+		line-height: 100%; /* 1rem */
+		letter-spacing: 0.05rem;
 	}
 </style>
