--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,6 +66,10 @@ const sections = [Nav, Hero, Intro, About, News, Sponsors, Cycle, Time, Items, P
 				--gray: #6e6e73;
 				--container: #f5f5f7;
 				--gray-container: #e8e8ec;
+				--items-bg: #f1f3fb;
+				--items-brand-tag: #ffb6b1;
+				--items-progress: #00d959;
+				--items-progress-bg: #e2e2e2;
 			}
 
 			* {
